--- a/drupal/web/themes/custom/bearcom/css/pages/_contact-webform.css
+++ b/drupal/web/themes/custom/bearcom/css/pages/_contact-webform.css
@@ -15,7 +15,7 @@
   color: var(--color-dark-blue);
   text-transform: uppercase;
   letter-spacing: 0;
-  margin: 0 0 var(--spacing-md);
+  margin: 0 0 var(--spacing-lg);
 }
 
 /* --------------------------------------------------------------------------
